[metadata]
name = fishtank
home-page = https://github.com/openuado/fishtank/
summary = Command line interface (CLI) for redfish
description-file = 
    README.md
    AUTHORS
author = openuado
author-email = herveberaud.pro@gmail.com
license = MIT
classifier =
    Development Status :: 3 - Alpha
    Intended Audience :: Information Technology
    License :: OSI Approved :: MIT License
    Operating System :: POSIX
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7

[files]
packages =
    fishtank

[entry_points]
console_scripts =
    fishtank = fishtank.__main__:main

[wheel]
universal = 1
